# Group10LabWork

./: .gitignore  README.md  test.c
lab02/: constants.c  hello.c  q10.pointers.c  q2.computations.c  q3.loops.c  q5.conditionals.c  q6.strings.c  q7.IO.c
lab03/: primes.txt  pthreads.c  threads.c
lab04/: machine.c
lab05/: q1.hello.c  q2.shared_data.c  q3.datatypes.c  q4.datapack.c
lab06/: broadcast_ring.c  primes_mpi.c  primes_mpi_monarch.c  test.c
lab07/: CMakeLists.txt  task1.c  task2.c  task3.c  task4.c  task4a.c  task4b.c
lab09/: process_0.txt  process_1.txt  process_2.txt  process_3.txt  process_4.txt  process_5.txt  process_6.txt  process_7.txt  process_8.txt  q2.c  q4.c
lab10/: q4.c  quad.txt  roots.txt
mutex/: CMakeLists.txt  IntQueue.c  IntQueue.h  main.c
